JEAP-6409 Avoid costly correlation queries if no events are correlated by process data